--- a/dockerCompose.yaml
+++ b/dockerCompose.yaml
@@ -35,7 +35,7 @@ services:
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
   vhr-backend:
-    image: vhr-backend:1.0
+    image: vhr-backend:${VHRBACKEND_VERSION}
     expose:
       - "8081" 
     depends_on:
