--- a/deploy/k8s/overlays/dev/kustomization.yaml
+++ b/deploy/k8s/overlays/dev/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../../base/
+- ../../base
 - namespace.yaml  # creat a new namespace
 
 
@@ -13,7 +13,7 @@ namespace: vhr
 
 replicas:
   - name: vhr-backend
-    count: 3
+    count: 2
   - name: vhr-ui
     count: 2
 
